# Vulkanized

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
Assets/Shaders/: Builtin.Object.frag.glsl
Project/: Application.cpp  Application.h  Definitions.h  Device.cpp  Device.h  Logger.cpp  Logger.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h  Types.h  Window.cpp  Window.h  main.cpp
